--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+        alert(
+        `Release Notes Alpha 0.0.3:
+        - Adicionado alert no site para mostrar a release atual e suas alteraçoes.
+        - Melhorado a responsividade para aparelhos com tela de 5 polegadas.
+        - Adicionado a funcionalidade de excluir comentários
+        - Adicionado a funcionalidade de curtir comentários
+        `
+        );
+    </script>
   </body>
 </html>
